created swagger documentation for the corresponding remaining routes
