# app/Http/Controllers/MainPage/ListAllPostsController.php
@@ -10,6 +10,20 @@ use App\Actions\MainPage\ListAllPostsAction;
 
 class ListAllPostsController extends Controller
 {
+    /**
+     * @OA\Get(
+     ** path="/api/v1/main/blog",
+     *   tags={"MainPage"},
+     *   summary="Fetch All Created Posts",
+     *   operationId="allPosts",
+     *
+     *   @OA\Response(response=200,description="Success"),
+     *   @OA\Response(response=401,description="Unauthenticated"),
+     *   @OA\Response(response=500,description="Internal Server Error"),
+     *   @OA\Response(response=404,description="Page Not found"),
+     *   @OA\Response(response=422,description="Unprocessable Entity")
+     *),
+     **/
     public function __invoke(ListAllPostsAction $listAllPostsAction) : JsonResponse
     {
         try {
