# storage/api-docs/api-docs.yaml
@@ -390,6 +390,57 @@ paths:
           description: 'Page Not found'
         422:
           description: 'Unprocessable Entity'
+  '/api/v1/main/blog/{uuid}':
+    get:
+      tags:
+        - MainPage
+      summary: 'Fetch A Single Post'
+      operationId: singlePost
+      responses:
+        200:
+          description: Success
+        401:
+          description: Unauthenticated
+        500:
+          description: 'Internal Server Error'
+        404:
+          description: 'Page Not found'
+        422:
+          description: 'Unprocessable Entity'
+  /api/v1/main/blog:
+    get:
+      tags:
+        - MainPage
+      summary: 'Fetch All Created Posts'
+      operationId: allPosts
+      responses:
+        200:
+          description: Success
+        401:
+          description: Unauthenticated
+        500:
+          description: 'Internal Server Error'
+        404:
+          description: 'Page Not found'
+        422:
+          description: 'Unprocessable Entity'
+  /api/v1/main/promotions:
+    get:
+      tags:
+        - MainPage
+      summary: 'Fetch All Promotions'
+      operationId: allPromotions
+      responses:
+        200:
+          description: Success
+        401:
+          description: Unauthenticated
+        500:
+          description: 'Internal Server Error'
+        404:
+          description: 'Page Not found'
+        422:
+          description: 'Unprocessable Entity'
 components:
   securitySchemes:
     jwt:
